fixed overflow issues

--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,10 @@
   margin: 0;
 }
 
+.container{
+  max-width: 1400px;
+}
+
 body {
   background-color: var(--primary-color);
   font-family: "Outfit", sans-serif;
@@ -27,6 +31,7 @@ nav {
   justify-content: space-around;
   align-items: center;
   padding: 1rem .5rem;
+  max-height: 600px;
 }
 
 nav ul {
@@ -114,6 +119,7 @@ form button:hover{
   gap: 1rem;
   overflow-x: auto;
   overscroll-behavior-inline: contain;
+  max-width: 1300px;
 }
 
 .trending-carousel::-webkit-scrollbar{
